--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
+    "react-slick": "^0.30.2",
     "reactstrap": "^9.2.2",
     "sass": "^1.77.2",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "typescript": "^5"
   }
 }
